Bug 525700 - Satchel should consider history_expire_days_min in expiry calculation. r=dolske